<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_green"
    tools:context=".ui.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:foregroundGravity="clip_vertical|center_horizontal"
        app:cardCornerRadius="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:contentDescription="@string/image_of_a_goat"
                android:src="@drawable/goat__1_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/brown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter credentials to login"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_margin="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassord"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="307dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/login"
                android:background="@color/light_green"
                android:textColorHint="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>