<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_green"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="10dp"
        app:layout_editor_absoluteX="1dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/animal_id_view"
                android:text="@string/animal_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/animal_id"
                android:text="@string/animal_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/animal_id_view"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/animal_price_view"
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/animal_id_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/animal_price"
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/animal_id"
                app:layout_constraintStart_toEndOf="@+id/animal_price_view"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/sold_to_view"
                android:text="@string/sold_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/animal_price_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/sold_to"
                android:text="@string/sold_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/animal_price"
                app:layout_constraintStart_toEndOf="@+id/sold_to_view"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/selling_date_view"
                android:text="@string/selling_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/sold_to_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/selling_date"
                android:text="@string/selling_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sold_to"
                app:layout_constraintStart_toEndOf="@+id/selling_date_view"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>